# filmorator

./: .dockerignore  .pre-commit-config.yaml  CLAUDE.md  Cargo.toml  Dockerfile  README.md  VIOLATIONS.md  VISION.md  bacon.toml  dist-workspace.toml  docker-compose.yml  fault_correction_plan.md.md  justfile  original_implementation_plan.md
.claude/: leptos-investigation-index.md  synthesis-leptos-migration.md  workflow-investigation-plan.md  workflow-pre-index.md
.claude/skills/filmorator-debug/: SKILL.md
.claude/skills/filmorator-debug/references/: api.md  browser.md  database.md  failure-patterns.md  infrastructure.md  storage.md
.github/workflows/: ci.yml  publish.yml  release.yml
_legacy/: README.md
_legacy/filmorator-web/src/: config.rs  db.rs  error.rs
_legacy/filmorator-web/src/handlers/: api.rs  mod.rs  session.rs
filmorator-core/: Cargo.toml
filmorator-core/src/: lib.rs  matchup.rs  models.rs  ranking.rs
filmorator-web/: Cargo.toml
filmorator-web/src/: app.rs  config.rs  db.rs  lib.rs  main.rs  s3.rs  state.rs
filmorator-web/src/handlers/: api.rs  compare.rs  session.rs  style.rs
migrations/: 20250108_001_initial_schema.sql  20250110_002_remove_unused_columns.sql
spec/: ARCHITECTURE_PLAN.md  IMPLEMENTATION_PLAN.md  personas.md  product-spec.md  user-stories.md
