[package]
name = "filmorator-web"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "filmorator-web"
path = "src/main.rs"

[dependencies]
filmorator-core = { path = "../filmorator-core" }

serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
sqlx = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
aws-sdk-s3 = { workspace = true }
aws-config = { workspace = true }

[lints]
workspace = true
